# jj-lsp

./: AGENT.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: backend.rs  conflict.rs  main.rs  types.rs  utils.rs
src/snapshots/: jj_lsp__conflict__tests__diff_four_sides.snap  jj_lsp__conflict__tests__diff_three_sides.snap  jj_lsp__conflict__tests__diff_two_sides.snap
tests/conflicts/diff/: four_sides.md  three_sides.md  three_sides.txt  two_sides.md
tests/conflicts/git/: two_sides.md
tests/conflicts/snapshot/: four_sides.md  three_sides.md  two_sides.md
tests/data/conflicts/: conflict_four_sides.md
