[package]
name = "jj-lsp"
version = "0.1.1-dev1"
edition = "2021"
description = "LSP to resolve conflicts in the jj-vcs"
authors = ["Nils Koch <mail@nilskch.dev>"]
repository = "https://github.com/nilskch/jj-lsp"
readme = "README.md"
license = "MIT"

[dependencies]
tower-lsp-server = "0.21.0"
tokio = { version = "1.44.1", features = ["full"] }
