[package]
name = "jj-lsp"
version = "0.1.1-dev1"
edition = "2021"
description = "LSP to resolve conflicts in the jj-vcs"
authors = ["Nils Koch <mail@nilskch.dev>"]
repository = "https://github.com/nilskch/jj-lsp"
readme = "README.md"
license = "MIT"

[dependencies]
insta = "1.43"
lazy_static = "1.5"
regex = "1"
tokio = { version = "1.48", features = ["full"] }
tower-lsp-server = "0.22"
